[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
publish = false
repository = "https://github.com/runeengine/rune"

[workspace.dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145" }
