[package]
name = "rune"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false }
bevy_workflows = { path = "../bevy_workflows" }
crossterm = { version = "0.29.0", optional = true }
log = { version = "*", features = ["release_max_level_warn"] }
rune_remote = { path = "../rune_remote" }

[features]
default = ["dev_native"]
dev_native = [
    "dep:crossterm",

    "bevy_base",
    "dev",
    # "bevy/file_watcher",
    # "bevy/embedded_watcher",
]
dev = [
    "bevy/dynamic_linking",

    # "bevy/bevy_dev_tools",
    # "bevy/bevy_ui_debug",
    # "bevy/track_location",
]
release = [
    "bevy_base",
]
bevy_base = [
    "bevy/trace",
    "bevy/debug",
    "bevy/bevy_log",

    "bevy/bevy_remote",

    "bevy/bevy_state",

    # window
    "bevy/bevy_window",
    "bevy/bevy_winit",
    # rendering backend
    "bevy/wayland",

    # rendering
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_camera",

    # "bevy/bevy_ui_render",

    "bevy/bevy_asset",

    "bevy/bevy_image",
    "bevy/png",
    # "bevy/bevy_text",

    "bevy/bevy_sprite",
    "bevy/bevy_sprite_render",
]
