[package]
name = "rune_cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
rune = { path = "../rune", default-features = false }

[features]
default = ["rune/dev_native"]
release = ["rune/release"]
